# contentstack-management-python

./: .gitignore  .talismanrc  AGENTS.md  CHANGELOG.md  CODEOWNERS.txt  ENDPOINT_INTEGRATION.md  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: README.md  code-review.mdc  contentstack-management-python.mdc  dev-workflow.md  python.mdc  testing.mdc
.github/workflows/: back-merge-pr.yml  check-version-bump.yml  release.yml  sca-scan.yml  unit-test.yml
.husky/: pre-push
.husky/hooks/: test-runner.sh
apidoc/: Test Results - .html
contentstack_cms/: __init__.py  client.py
contentstack_cms/core/: error.py  http_client.py  logger.py  login.py  response.py  user.py
contentstack_cms/query/: content_type.py
contentstack_cms/stack/: stack.py  stacks.py
contentstack_management/: __init__.py  _api_client.py  _constant.py  _errors.py  _messages.py  common.py  contentstack.py  endpoint.py  region_refresh.py
contentstack_management/aliases/: aliases.py
contentstack_management/assets/: assets.py
contentstack_management/auditlogs/: auditlog.py
contentstack_management/branches/: branches.py
contentstack_management/bulk_operations/: bulk_operation.py
contentstack_management/content_types/: content_type.py
contentstack_management/core/: client.py  http_client.py
contentstack_management/delivery_token/: __init__.py  delivery_token.py
scripts/: download_regions.py
skills/: README.md
tests/: __init__.py  cred.py  test_contentstack.py  test_organizations.py  test_user_session.py  test_users.py
(+373 files in other folders)
