[project]
name = "contentstack_management"
version = "0.0.1"
authors = [
  { name="sunil", email="sunil.lakshman@contentstack.com" },
]
description = "Contentstack API Client Library for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/contentstack/contentstack-management-python"
"Bug Tracker" = "https://github.com/contentstack/contentstack-management-python/issues"